syntax = "proto3";

package payment;

option go_package = "./;payment";

service PaymentService {
    rpc UpdatePaymentStatus (PaymentStatusRequest) returns (PaymentStatusResponse);
}

message PaymentStatusRequest {
    int32 orderId = 1;
    string status = 2;
}

message PaymentStatusResponse {
    bool success = 1;
    string message = 2;
}
